--- a/index3.html
+++ b/index3.html
@@ -1,6 +1,5 @@
-<title>Project</title>
-<!-- <script src="https://d3js.org/d3.v4.min.js"></script> -->
-<script src="http://d3js.org/d3.v6.min.js" charset="utf-8"></script>
+<title>Crossfilter with d3.csv</title>
+<script src="https://d3js.org/d3.v6.min.js"></script>
 <script src="crossfilter.js"></script>
 <h3 id="loading">Loading....</h3>
 <div>Number of rows: <span id="size">0</span></div>
@@ -11,14 +10,14 @@
 <h3>Amp</h3>
 <ol id="amplitude"></ol>
 <script>
-var url = "try.csv";
+var url = "ext_26_1_L_A20200830T040915.csv";
 var numerics = ["magnitude", "raw_magnitude", "amplitude"];
 
 var threadL,
 magnitude, raw_magnitude, amplitude;
 
 // load the data from an external file
-d3.csv(url, function(data) {
+d3.csv(url).then( function(data) {
 
   // coerce numbers to floats, empty strings to null
   data.forEach(function(d) {
@@ -47,7 +46,7 @@ d3.csv(url, function(data) {
   renderTopList(amplitude, 4, "#amplitude");
 });
 
-
+// http://stackoverflow.com/a/1830844
 function isNumber(n) {
   return !isNaN(parseFloat(n)) && isFinite(n);
 }
@@ -56,12 +55,12 @@ function renderTopList(dimension, count, selector) {
   d3.select(selector).selectAll("li")
     .data(dimension.top(count))
     .enter().append("li")
-    .text(function(d) { return d.package_time + ";" + JSON.stringify(d)});
-} 
+    .text(function(d) { return JSON.stringify(d) });
+}
 </script>
 <style>
 body {
   font-size: 13px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: sans-serif;
 }
 </style>
