--- a/code6c.html
+++ b/code6c.html
@@ -19,4 +19,26 @@
         position: absolute
     }
 </style>
+<style>
+    body {
+        font-size: 13px;
+        font-family: sans-serif;
+    }
+    
+    svg {
+        /* border: solid 1px blue; */
+        margin: 50px;
+    }
+    
+    #popupDiv {
+        position: absolute;
+        text-align: center;
+        padding: 2px;
+        font: 12px sans-serif;
+        background: lightskyblue;
+        border: 0px;
+        border-radius: 8px;
+        pointer-events: none;
+    }
+    </style>
 <body></body>
